fixed double border issue (#4103)

--- a/src/components/range/editor.lazy.scss
+++ b/src/components/range/editor.lazy.scss
@@ -31,7 +31,7 @@
 			margin-left: 10px;
 
 			.components-input-control__input {
-				padding: 0 1px 0 8px !important;
+				padding: 0 1px 0 6px !important;
 				text-align: left;
 				font-size: 14px;
 			}
